Config class renamed from Config.java to SwaggerConfig.java, controller class renamed from Conveyor.java to ConveyorController.java. Generated by openapi generator interface renamed from DefaultAPI to ConveyorApi.
